docs: refresh README and docs for Gradle/Spring Boot 4/Java 25; add noop profile guide