@@ -1,39 +1,33 @@
 # 03 — Python → Java Dependency Map
 
-Target stack: **Java 25 LTS + Spring Boot 4.1.0 + Gradle 9.6.1 (Groovy DSL) + Groovy 5.0.7 + PostgreSQL 16 + Ollama**.
+Target stack: **Java 25 LTS + Spring Boot 4.1.0 + Gradle 9.6.1 (Groovy DSL) + Groovy 5.0.7 + PostgreSQL 16 + H2 (noop profile) + OpenAI-compatible LLM endpoint**.
 
-Agent pins a large dependency tree. This document maps every *core* dependency to a Java alternative. Optional/provider-specific deps are listed but marked out-of-scope.
+This document maps every *core* Hermes Python dependency to a Java alternative. Optional/provider-specific deps are listed but marked out-of-scope.
 
 ## 1. Core Dependencies
 
 | Python library | Agent usage | Java replacement | Notes |
 |----------------|--------------|--------------------|-------|
-| `openai==2.24.0` | Chat completions, embeddings, Responses API | **LangChain4j** `open-ai` module | Works with any OpenAI-compatible endpoint |
-| `httpx[socks]==0.28.1` / `requests==2.33.0` | HTTP clients | **Java 11 `java.net.http.HttpClient`** + `OkHttp` for SOCKS/proxy | Virtual threads make HttpClient ergonomic |
-| `pydantic==2.13.4` | Validation, serialization, JSON schemas | **Jackson** + **Jakarta Bean Validation** (`hibernate-validator`) | No exact Pydantic clone in Java |
-| `jinja2==3.1.6` | System/skill prompt templates | **Pebble** (`io.pebbletemplates:pebble`) | Jinja-like syntax |
-| `pyyaml==6.0.3` / `ruamel.yaml` | Config files, skill metadata | **SnakeYAML** | Standard |
-| `prompt_toolkit==3.0.52` | Interactive CLI REPL | **JLine** (`org.jline:jline`) + **Picocli** | History, completion |
-| `rich==14.3.3` | Colored terminal output | **Jansi** + **SLF4J/Logback** colorizers | Keep minimal |
-| `tenacity==9.1.4` | Retry decorators | **Resilience4j** (`resilience4j-retry`) | Lightweight |
-| `croniter==6.0.0` | Cron scheduling | **Quartz Scheduler** or Spring `@Scheduled` cron | Quartz for cron expressions |
-| `packaging==26.0` | Version parsing | **JSemVer** | Only if needed |
-| `Markdown==3.10.2` | Markdown rendering | **CommonMark** or **Flexmark** | For CLI output |
-| `PyJWT[crypto]==2.13.0` | JWT for gateway/auth | **JJWT** or **Nimbus JOSE** | Standard |
-| `cryptography==46.0.7` | Crypto ops | **BouncyCastle** (`bcprov-jdk18on`) | Only if needed beyond JJWT |
-| `psutil==7.2.2` | Process/system info | **OSHI** or JDK `ProcessHandle` | Use ProcessHandle first |
-| `websockets==15.0.1` | WebSocket clients/servers | `java.net.http.WebSocket` | For CDP browser client |
-| `fastapi>=0.104.0` + `uvicorn` | API server, gateway webhooks | **Spring Boot 4.1.0** Web MVC + virtual threads | Replaces both |
-| `Pillow==12.2.0` | Image processing | **Thumbnailator** or JavaFX | Optional; vision mostly base64 passthrough |
-| Browser automation | agent-browser / Playwright | CDP WebSocket client (`Java-WebSocket` or Jetty WS) + Chromium launcher | Avoid 200 MB Playwright deps |
-| `jsoup` equivalent | HTML parsing / extraction | `org.jsoup:jsoup` | Web extract readability fallback |
-| `commons-lang3` / `commons-io` | String/file utilities | `org.apache.commons:commons-lang3`, `commons-io:commons-io` | Already standard; document explicitly |
-| `flexmark` | Markdown | `com.vladsch.flexmark:flexmark-all` | Skill and message rendering |
+| `openai` | Chat completions, embeddings | **LangChain4j** `open-ai` module | Works with any OpenAI-compatible endpoint |
+| `httpx` / `requests` | HTTP clients | **Java 11 `java.net.http.HttpClient`** | Virtual threads make HttpClient ergonomic |
+| `pydantic` | Validation, JSON schemas | **Jackson** + **Jakarta Bean Validation** | No exact Pydantic clone in Java |
+| `jinja2` | System/skill prompt templates | **Pebble** (`io.pebbletemplates:pebble`) | Jinja-like syntax |
+| `pyyaml` | Config files | **SnakeYAML** (via Spring Boot) | Standard |
+| `prompt_toolkit` | Interactive CLI REPL | **JLine** + **Picocli** | History, completion |
+| `rich` | Colored terminal output | **Jansi** + Logback colorizers | Keep minimal |
+| `tenacity` | Retry decorators | **Resilience4j** (`resilience4j-retry`) | Lightweight |
+| `croniter` | Cron scheduling | **Quartz Scheduler** or Spring `@Scheduled` cron | Quartz for cron expressions |
+| `Markdown` | Markdown rendering | **CommonMark** or **Flexmark** | Optional |
+| `PyJWT` | JWT for gateway/auth | **JJWT** or **Nimbus JOSE** | Optional |
+| `cryptography` | Crypto ops | **BouncyCastle** | Optional |
+| `psutil` | Process/system info | JDK `ProcessHandle` + OSHI | Use ProcessHandle first |
+| `websockets` | WebSocket clients | `java.net.http.WebSocket` | CDP browser client |
+| `fastapi` + `uvicorn` | API server | **Spring Boot 4.1.0** Web MVC + virtual threads | Replaces both |
+| `Pillow` | Image processing | Base64 passthrough; optional Thumbnailator | Vision mostly base64 |
+| Browser automation | Playwright | Chromium launcher + CDP WebSocket client | Avoid 200 MB Playwright deps |
+| `BeautifulSoup` / `html2text` | HTML parsing | `org.jsoup:jsoup` | Web extract fallback |
+| `commons-lang3` / `commons-io` | String/file utilities | Apache Commons Lang3 / IO | Standard |
 | `cron-utils` | Cron expression parsing | `com.cronutils:cron-utils` | Cron tool / gateway job parsing |
-| `commons-imaging` | Image metadata | `org.apache.commons:commons-imaging` | Vision metadata, optional |
-| `faster-whisper==1.2.1` + `sounddevice` | Voice transcription | **Whisper.cpp Java bindings** / **Vosk** | Skip for prototype |
-| `numpy` | Audio arrays | Java Sound API / TarsosDSP | Skip for prototype |
-| `python-telegram-bot` | Telegram gateway | TelegramBots Java library | Defer; keep interface |
 
 ## 2. Provider / Optional Integrations (Out of Scope)
 
@@ -42,21 +36,19 @@ Agent pins a large dependency tree. This document maps every *core* dependency t
 | `anthropic` | `anthropic` | LangChain4j Anthropic module |
 | `mistralai` | `mistral` | LangChain4j Mistral module |
 | `boto3` | `bedrock` | AWS SDK v2 for Java |
-| `google-auth`, `google-api-python-client` | `google` | Google API Client for Java |
+| `google-auth` | `google` | Google API Client for Java |
 | `azure-identity` | `azure-identity` | Azure Identity for Java |
 | `honcho-ai` | `honcho` | REST wrapper or skip |
 | `supermemory` | `supermemory` | REST wrapper or skip |
 | `mem0ai` | `mem0` | REST wrapper or skip |
 | `slack-bolt`, `discord.py`, `mautrix` | `messaging` | Slack SDK, Discord4J, Matrix — defer |
-| `aiohttp` | `messaging`/`web` | Spring WebClient or `HttpClient` |
-| `mcp==1.26.0` | `mcp` | **`io.modelcontextprotocol.sdk:mcp`** |
-| `agent-client-protocol==0.9.0` | `acp` | ACP is new; custom or JetBrains lib when stable |
+| `mcp` | `mcp` | **`io.modelcontextprotocol.sdk:mcp:2.0.0`** |
+| `agent-client-protocol` | `acp` | ACP is new; custom or JetBrains lib when stable |
 | `firecrawl-py` | `web` | Firecrawl REST API |
 | `exa-py` | `exa` | Exa REST API |
 | `fal-client` | `fal` | FAL REST API |
 | `edge-tts` / `elevenlabs` | `tts-*` | ElevenLabs REST API; Edge TTS skip |
 | `modal`, `daytona` | `modal`, `daytona` | Their respective Java/REST APIs |
-| `hindsight-client` | `hindsight` | REST wrapper |
 
 ## 3. Build / Test / Dev Dependencies
 
@@ -64,115 +56,23 @@ Agent pins a large dependency tree. This document maps every *core* dependency t
 |-------------|------------------|
 | `pytest` + `pytest-asyncio` | **JUnit 5** + **AssertJ** + **Awaitility** |
 | `ruff` | **Spotless** + **Checkstyle** |
-| `mypy` | **Checker Framework** or strict null checks in Java |
+| `mypy` | Checker Framework or strict null checks in Java |
 | `uv` / `pip` | **Gradle** |
 | `setuptools` entry points | Spring Boot `spring.factories` / ServiceLoader |
 
-## 4. Actual `build.gradle` (PostgreSQL + Ollama)
+## 4. Decision Notes
 
-```groovy
-plugins {
-    id 'java'
-    id 'groovy'
-    id 'org.springframework.boot' version '4.1.0'
-    id 'io.spring.dependency-management' version '1.1.7'
-}
-
-group = 'com.azhukov'
-version = '0.0.1-SNAPSHOT'
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_25
-    targetCompatibility = JavaVersion.VERSION_25
-}
-
-dependencies {
-    // Spring Boot
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-
-    // Groovy 5
-    implementation 'org.apache.groovy:groovy:5.0.7'
-    implementation 'org.apache.groovy:groovy-json:5.0.7'
-
-    // LLM
-    implementation 'dev.langchain4j:langchain4j:1.18.0'
-    implementation 'dev.langchain4j:langchain4j-open-ai:1.18.0'
-    implementation 'dev.langchain4j:langchain4j-ollama:1.18.0'
-
-    // MCP
-    implementation 'io.modelcontextprotocol.sdk:mcp:2.0.0'
-
-    // DB / migrations
-    runtimeOnly 'org.postgresql:postgresql'
-    implementation 'org.flywaydb:flyway-core'
-    implementation 'org.flywaydb:flyway-database-postgresql'
-
-    // Templating
-    implementation 'io.pebbletemplates:pebble:4.1.2'
-
-    // Retry
-    implementation 'io.github.resilience4j:resilience4j-retry:2.4.0'
-
-    // CLI
-    implementation 'info.picocli:picocli:4.7.7'
-    implementation 'org.jline:jline:4.3.1'
-
-    // WebSocket client for CDP
-    implementation 'org.java-websocket:Java-WebSocket:1.6.0'
-
-    // HTML / markdown parsing
-    implementation 'org.jsoup:jsoup:1.18.3'
-    implementation 'com.vladsch.flexmark:flexmark:0.64.8'
-    implementation 'com.vladsch.flexmark:flexmark-html2md-converter:0.64.8'
-
-    // Commons utilities
-    implementation 'org.apache.commons:commons-lang3:3.17.0'
-    implementation 'commons-io:commons-io:2.18.0'
-    implementation 'com.cronutils:cron-utils:9.2.1'
-
-    // Image metadata (vision safety / thumbnailing)
-    implementation 'org.apache.commons:commons-imaging:1.0.0-alpha5'
-
-    // Logging
-    implementation 'org.slf4j:slf4j-api:2.0.17'
-
-    // Test
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.apache.groovy:groovy-test:5.0.7'
-    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
-    testImplementation 'org.testcontainers:junit-jupiter:1.21.4'
-    testImplementation 'org.testcontainers:postgresql:1.21.4'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
-    jvmArgs '-XX:+EnableDynamicAgentLoading'
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.release = 25
-}
-
-springBoot {
-    buildInfo()
-}
-```
-
-## 5. Decision Notes
-
-- **LangChain4j vs Spring AI:** LangChain4j is more mature and provider-agnostic. Default provider is **OpenAI-compatible** via `langchain4j-open-ai`; local Ollama is just the dev default (`http://localhost:11434/v1`).
-- **WebFlux vs Virtual Threads:** Chose **Spring MVC + virtual threads** (`spring.threads.virtual.enabled=true`). Agent is I/O-bound but tools are mostly blocking (JDBC, CDP, shell); reactive types would infect the whole stack. WebFlux only if SSE/streaming needed later.
-- **Validation:** Bean Validation + Jackson. Tool schemas generated via Jackson or manually.
-- **HTTP client:** Start with `java.net.http.HttpClient`. Switch to OkHttp if proxy/SOCKS needs exceed JDK support.
-- **Persistence:** PostgreSQL via JDBC + Flyway. Local dev uses the existing `project-workflow-db-1` container on port 5432 with database `java_agent`.
+- **LangChain4j vs Spring AI:** LangChain4j is more mature and provider-agnostic. Default provider is **OpenAI-compatible** via `langchain4j-open-ai`; dev default endpoint is Ollama-compatible.
+- **WebFlux vs Virtual Threads:** Chose **Spring MVC + virtual threads** (`spring.threads.virtual.enabled=true`). Agent tools are mostly blocking (JDBC, CDP, shell); reactive types would infect the whole stack.
+- **Validation:** Bean Validation + Jackson. Tool schemas generated via introspection of `@ToolParam` annotations.
+- **HTTP client:** `java.net.http.HttpClient`. Switch to OkHttp if proxy/SOCKS needs exceed JDK support.
+- **Persistence:** PostgreSQL via JDBC + Flyway for dev/prod; H2 in-memory for `noop` profile and tests.
 - **Agent name:** Configurable via `agent.name`; defaults to `Джава агент`.
 
-## 6. Implementation Status
+## 5. Implementation Status
 
 - **Phase 0**: config, Flyway schema, build ✅
 - **Phase 1 skeleton**: domain model, contracts, tool registry, NoOp model, happy path HTTP endpoint ✅
-- **Phase 1.5**: real `LangChain4jModelClient`, JPA persistence, tool skeletons (`file`, `web`, `terminal`, `execute_code`, `browser`, `vision`, `memory`, `todo`, `skill`, `mcp`), CLI REPL, gateway `/v1/chat/completions`, approvals gate ✅
+- **Phase 1.5**: real `LangChain4jModelClient`, JPA persistence, tool skeletons, CLI REPL, gateway `/v1/chat/completions`, approvals gate ✅
+- **Phase 2**: browser/vision tools, MCP client, skill/memory tools, delegation ✅
+- **Phase 3 (current)**: tests, NoOp profiles, docs, production readiness, CLI hardening
